--- a/front-end/src/app/contacts/contacts-table/contacts-table.component.html
+++ b/front-end/src/app/contacts/contacts-table/contacts-table.component.html
@@ -16,9 +16,9 @@
         </th>
         <th [@fadeInOut] *ngIf="isColumnVisible('type')" [class]="getSortClass('type')" (click)="changeSortDirection('type')">Type
         </th>
-        <!--<th [@fadeInOut] *ngIf="isColumnVisible('id')" [class]="getSortClass('id')" (click)="changeSortDirection('id')">ID
-        </th>-->
-        <th [@fadeInOut] *ngIf="isColumnVisible('street')" [class]="getSortClass('street')" (click)="changeSortDirection('street')">Street
+        <th [@fadeInOut] *ngIf="isColumnVisible('id')" [class]="getSortClass('id')" (click)="changeSortDirection('id')">ID
+        </th>
+        <th [@fadeInOut] *ngIf="isColumnVisible('street')" [class]="getSortClass('street')" (click)="changeSortDirection('street')">Address
         </th>
         <th [@fadeInOut] *ngIf="isColumnVisible('city')" [class]="getSortClass('city')" (click)="changeSortDirection('city')">City
         </th>
@@ -72,7 +72,7 @@
         </td>
         <td [@fadeInOut] *ngIf="isColumnVisible('name')">{{cnt.name}}</td>
         <td [@fadeInOut] *ngIf="isColumnVisible('type')">{{cnt.type}}</td>
-       <!-- <td [@fadeInOut] *ngIf="isColumnVisible('id')">{{cnt.id}}</td>-->
+        <td [@fadeInOut] *ngIf="isColumnVisible('id')">{{cnt.id}}</td>
         <td [@fadeInOut] *ngIf="isColumnVisible('street')">{{cnt.street1}} {{cnt.street2}}</td>
         <td [@fadeInOut] *ngIf="isColumnVisible('city')">{{cnt.city}}</td>
         <td [@fadeInOut] *ngIf="isColumnVisible('state')">{{cnt.state}}</td>
@@ -165,13 +165,15 @@
                     </label>
                   </div>
                 </div>
+ 
+
                 <div class="col-md">
                   <div class="checkbox">
                     <label>
-                      <input [(ngModel)]="getSortableColumn('street').checked" (change)="toggleVisibility('street', $event)"
-                        type="checkbox" [disabled]="getSortableColumn('street').disabled">
-                      <span [ngClass]="{'disabled-column-option':getSortableColumn('street').disabled}">
-                        Street
+                      <input [(ngModel)]="getSortableColumn('id').checked" (change)="toggleVisibility('id', $event)"
+                        type="checkbox" [disabled]="getSortableColumn('id').disabled">
+                      <span [ngClass]="{'disabled-column-option':getSortableColumn('id').disabled}">
+                        ID 
                       </span>
                     </label>
                   </div>
@@ -179,6 +181,19 @@
             </div>
 
             <div class="row">
+
+                <div class="col-md">
+                    <div class="checkbox">
+                      <label>
+                        <input [(ngModel)]="getSortableColumn('street').checked" (change)="toggleVisibility('street', $event)"
+                          type="checkbox" [disabled]="getSortableColumn('street').disabled">
+                        <span [ngClass]="{'disabled-column-option':getSortableColumn('street').disabled}">
+                          Address
+                        </span>
+                      </label>
+                    </div>
+                  </div>  
+
               <div class="col-md">
                 <div class="checkbox">
                   <label>
@@ -201,20 +216,21 @@
                     </label>
                   </div>
                 </div>
-                <div class="col-md">
-                  <div class="checkbox">
-                    <label>
-                      <input [(ngModel)]="getSortableColumn('zip').checked" (change)="toggleVisibility('zip', $event)"
-                        type="checkbox" [disabled]="getSortableColumn('zip').disabled">
-                      <span [ngClass]="{'disabled-column-option':getSortableColumn('zip').disabled}">
-                        Zip
-                      </span>
-                    </label>
-                  </div>
-                </div>  
+  
             </div>
             <div class="row">
-                            
+                <div class="col-md">
+                    <div class="checkbox">
+                      <label>
+                        <input [(ngModel)]="getSortableColumn('zip').checked" (change)="toggleVisibility('zip', $event)"
+                          type="checkbox" [disabled]="getSortableColumn('zip').disabled">
+                        <span [ngClass]="{'disabled-column-option':getSortableColumn('zip').disabled}">
+                          Zip
+                        </span>
+                      </label>
+                    </div>
+                  </div>  
+              
               <div class="col-md">
                 <div class="checkbox">
                   <label>
@@ -240,12 +256,7 @@
                   </label>
                 </div>
               </div>
-              <div class="col-md">
-                <div class="checkbox">
-                    </div>
-              </div>
-            </div>
-   
+  
           </div>
         </div>
         <div class="modal-footer">
