Fne 785 sprint19 mahendra (#843)
* FNE 785 changes

* FNE 785 changes

* FNE 785 changes

* FNE 785 chnges

--- a/front-end/src/app/contacts/contacts.component.html
+++ b/front-end/src/app/contacts/contacts.component.html
@@ -1,5 +1,6 @@
+
 <div class="contacts__main-container">
-    <div class="contacts__sidebar_filters"  *ngIf="showSideBar">
+    <div class="contacts__sidebar"  *ngIf="showSideBar">
       <app-contacts-filter [hidden]="!isShowFilters" 
         title="Filters"
         [formType]="formType">
