--- a/front-end/src/app/contacts/filter/contacts-filter.component.html
+++ b/front-end/src/app/contacts/filter/contacts-filter.component.html
@@ -4,36 +4,53 @@
   </header>
   <section>
     <div class="contacts__filter-sidebar-set">
+      
+      
       <div class="card">
-        <div class="card-header contacts__filter-title" (click)="toggleTypeFilterItem()">
-          Type
-          <i class="float-right" aria-hidden="true" 
-            [ngClass]="toggleFilterDirection(isHideTypeFilter)">
-          </i>          
-        </div>
-        <div class="card-body" 
-          [@openCloseScroll]="determineScrollState()">            
-          <div class="input-group py-1 transacions__filter-scroll-to-input">
-            <input class="form-control" [(ngModel)]="filterCategoriesText" type="text" 
-              placeholder="Search Type" aria-label="Search">
-            <div class="input-group-append" (click)="scrollToType()">
-              <span class="input-group-text">
-                  <!-- <i class="search-icon text-grey" aria-hidden="true"></i> no longer working?-->
-                  <i class="fas fa-search text-grey" aria-hidden="true"></i>
-              </span>
-            </div>              
-          </div>            
-          <div class="contacts__filter-type-list-body">
-              <ul *ngFor="let categoryGroup of transactionCategories" class="contacts__filter-type-list">
-                <li class="contacts__filter-type-group">{{ categoryGroup.text }}</li>
-                <app-contacts-filter-type
-                  [categoryType]="categoryType"
-                  #categoryElements *ngFor="let categoryType of categoryGroup.options">
-                </app-contacts-filter-type>
-            </ul>
+          <div class="card-header transactions__filter-title" (click)="toggleAmendmentIndicatorFilterItem()">
+            Type
+            <i class="float-right" aria-hidden="true" 
+              [ngClass]="toggleFilterDirection(isHideAmendmentIndicatorFilter)">
+            </i>          
+          </div>
+          <div class="card-body" [@openCloseScroll]="determineScrollState(isHideAmendmentIndicatorFilter)">
+            <div class="transactions__filter-type-list-body">
+              <ul class="transactions__filter-type-list">
+                <li *ngFor="let amendmentindicator of amendmentindicators">
+                  <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="{{ amendmentindicator?.amend_ind }}" 
+                      [(ngModel)]="amendmentindicator.selected">
+                    <label class="form-check-label" for="{{ amendmentindicator?.amend_ind}}">
+                      {{ amendmentindicator?.amendment_desc }}</label>
+                  </div>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
-      </div>
+
+        <div class="card">
+            <div class="card-header transactions__filter-title" (click)="toggleAmendmentIndicatorFilterItem()">
+              State
+              <i class="float-right" aria-hidden="true" 
+                [ngClass]="toggleFilterDirection(isHideAmendmentIndicatorFilter)">
+              </i>          
+            </div>
+            <div class="card-body" [@openCloseScroll]="determineScrollState(isHideAmendmentIndicatorFilter)">
+              <div class="transactions__filter-type-list-body">
+                <ul class="transactions__filter-type-list">
+                  <li *ngFor="let amendmentindicator of amendmentindicators">
+                    <div class="form-check">
+                      <input class="form-check-input" type="checkbox" id="{{ amendmentindicator?.amend_ind }}" 
+                        [(ngModel)]="amendmentindicator.selected">
+                      <label class="form-check-label" for="{{ amendmentindicator?.amend_ind}}">
+                        {{ amendmentindicator?.amendment_desc }}</label>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
 
     </div> 
   </section>
