label font fix for Mahi

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
@@ -93,7 +93,7 @@
             margin: 10px;
           }
           label {
-            font-family: 'sans-serif';
+            font-family: sans-serif;
             font-size: 1rem;
           }
           .input-group-prepend {
