--- a/front-end/src/app/contacts/filter/contacts-filter.component.html
+++ b/front-end/src/app/contacts/filter/contacts-filter.component.html
@@ -5,52 +5,50 @@
   <section>
     <div class="contacts__filter-sidebar-set">
       
-      
       <div class="card">
-          <div class="card-header transactions__filter-title" (click)="toggleAmendmentIndicatorFilterItem()">
+          <div class="card-header transactions__filter-title" (click)="toggleTypeFilterItem()">
             Type
             <i class="float-right" aria-hidden="true" 
-              [ngClass]="toggleFilterDirection(isHideAmendmentIndicatorFilter)">
+              [ngClass]="toggleFilterDirection(isHideTypeFilter)">
             </i>          
           </div>
-          <div class="card-body" [@openCloseScroll]="determineScrollState(isHideAmendmentIndicatorFilter)">
-            <div class="transactions__filter-type-list-body">
-              <ul class="transactions__filter-type-list">
-                <li *ngFor="let amendmentindicator of amendmentindicators">
+          <div class="card-body" [@openCloseScroll]="determineScrollType(isHideTypeFilter)">
+            <div class="contacts__filter-type-list-body">
+              <ul class="contacts__filter-type-list">
+                <li *ngFor="let type of types">
                   <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="{{ amendmentindicator?.amend_ind }}" 
-                      [(ngModel)]="amendmentindicator.selected">
-                    <label class="form-check-label" for="{{ amendmentindicator?.amend_ind}}">
-                      {{ amendmentindicator?.amendment_desc }}</label>
+                    <input class="form-check-input" type="checkbox" id="{{ type?.type_code }}" 
+                      [(ngModel)]="type.selected">
+                    <label class="form-check-label" for="{{ type?.type_code}}">
+                      {{ type?.type_desc }}</label>
                   </div>
                 </li>
               </ul>
             </div>
           </div>
-        </div>
-
-        <div class="card">
-            <div class="card-header transactions__filter-title" (click)="toggleAmendmentIndicatorFilterItem()">
+      </div>
+      <div class="card">
+            <div class="card-header transactions__filter-title" (click)="toggleStateFilterItem()">
               State
               <i class="float-right" aria-hidden="true" 
-                [ngClass]="toggleFilterDirection(isHideAmendmentIndicatorFilter)">
+                [ngClass]="toggleFilterDirection(isHideStateFilter)">
               </i>          
             </div>
-            <div class="card-body" [@openCloseScroll]="determineScrollState(isHideAmendmentIndicatorFilter)">
-              <div class="transactions__filter-type-list-body">
-                <ul class="transactions__filter-type-list">
-                  <li *ngFor="let amendmentindicator of amendmentindicators">
+            <div class="card-body" [@openCloseScroll]="determineScrollState(isHideStateFilter)">
+              <div class="contacts__filter-type-list-body">
+                <ul class="contacts__filter-type-list">
+                  <li *ngFor="let state of states">
                     <div class="form-check">
-                      <input class="form-check-input" type="checkbox" id="{{ amendmentindicator?.amend_ind }}" 
-                        [(ngModel)]="amendmentindicator.selected">
-                      <label class="form-check-label" for="{{ amendmentindicator?.amend_ind}}">
-                        {{ amendmentindicator?.amendment_desc }}</label>
+                      <input class="form-check-input" type="checkbox" id="{{ state?.state_code }}" 
+                        [(ngModel)]="state.selected">
+                      <label class="form-check-label" for="{{ state?.state_code}}">
+                        {{ state?.state_code}} - {{ state?.state_description}} </label>
                     </div>
                   </li>
                 </ul>
               </div>
             </div>
-          </div>
+      </div>
 
     </div> 
   </section>
