--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -1,14 +1,15 @@
 <ng-template #rt let-r="result" let-t="term">
   <ngb-highlight [result]="formatTypeaheadItem(r)" [term]="t"></ngb-highlight>
 </ng-template>
-
 <ng-template #rtOrg let-r="result" let-t="term">
   <ngb-highlight [result]="formatTypeaheadOrgItem(r)" [term]="t"></ngb-highlight>
 </ng-template>
-
 <ng-template #rtCommitteeId let-r="result" let-t="term">
   <ngb-highlight [result]="formatTypeaheadCommitteeId(r)" [term]="t"></ngb-highlight>
 </ng-template>
+<ng-template #rtCommitteeName let-r="result" let-t="term">
+    <ngb-highlight [result]="formatTypeaheadCommitteeName(r)" [term]="t"></ngb-highlight>
+  </ng-template>
 
 <div class="individual-receipt-container">
   <form [formGroup]="frmIndividualReceipt">
@@ -88,6 +89,7 @@
                             && col?.name !== 'last_name'
                             && !isFieldName(col?.name, 'entity_name')
                             && !isFieldName(col?.name, 'donor_cmte_id')
+                            && !isFieldName(col?.name, 'donor_cmte_name')
                             "
                         class="form-control"
                         [style.width]="col?.width"
@@ -196,7 +198,29 @@
                         [resultTemplate]="rtCommitteeId"
                         [inputFormatter]="formatterCommitteeId"
                         (selectItem)="handleSelectedEntity_NEW($event, col?.name)"
-                      />                  
+                      />  
+                      <input
+                        *ngIf="isFieldName(col?.name, 'donor_cmte_name')"
+                        class="form-control"
+                        [style.width]="col?.width"
+                        [style.height]="col?.height"
+                        [attr.type]="col?.type"
+                        [attr.name]="col?.name"
+                        [attr.value]="col?.value"
+                        [maxlength]="col?.validation?.max"
+                        [formControlName]="col?.name"
+                        [ngClass]="
+                          frmIndividualReceipt.get(col?.name)?.invalid &&
+                          (frmIndividualReceipt.touched || frmIndividualReceipt.dirty)
+                            ? 'input-field-error'
+                            : ''
+                        "
+                        id="typeahead-template-committee-name"
+                        [ngbTypeahead]="searchCommitteeName"
+                        [resultTemplate]="rtCommitteeName"
+                        [inputFormatter]="formatterCommitteeName"
+                        (selectItem)="handleSelectedEntity_NEW($event, col?.name)"
+                      />                                       
                     </div>
                     <div
                       class="error-text"
