Fne 1442 sprint19 mahendra (#859)
* FNE 1442 changes

* FNE 1442 changes

* FNE 1442 changes

* FNE 1442 changes

--- a/front-end/src/app/app-layout/app-layout.component.html
+++ b/front-end/src/app/app-layout/app-layout.component.html
@@ -2,8 +2,8 @@
   <div class="app__top">
     <nav class="navbar py-0 navbar-expand-lg">
       <div class="navbar-brand app__top-logo">
-        <a href="http://www.fec.gov/" target="_blank">
-          <img src="assets/img/logo-transparent.png" />
+        <a href="http://www.fec.gov/" draggable="false" target="_blank">
+          <img src="assets/img/logo-transparent.png" draggable="false"/>
         </a>
       </div>
       <button
@@ -84,7 +84,7 @@
             <address>
               1050 First Street NE, Washington DC, 20002
               <br />
-              <a href="https://fec.gov/contact" target="_blank">fec.gov/contact</a>
+              <a href="https://fec.gov/contact" draggable="false" target="_blank">fec.gov/contact</a>
             </address>
           </h6>
         </div>
@@ -110,7 +110,7 @@
               <ng-container *ngIf="radAnalystInfo"> (202) 694-1000 x{{ radAnalystInfo?.telephone_ext }} </ng-container>
               <br />
               <ng-container>
-                <a href="https://www.fec.gov/help-candidates-and-committees/question-rad/" target="_blank">
+                <a href="https://www.fec.gov/help-candidates-and-committees/question-rad/" draggable="false" target="_blank">
                   Find & contact your committee's analyst
                 </a>
               </ng-container>
