--- a/front-end/src/app/login/login.component.html
+++ b/front-end/src/app/login/login.component.html
@@ -2,10 +2,10 @@
 
   <header>
     <div class="logo">
-      <img src="assets/img/logo.svg" alt="FEC Logo" />
+      <img src="assets/img/logo.svg" draggable="false" alt="FEC Logo" />
     </div>
     <div>
-      <img src="https://www.fec.gov/static/img/wordmark.svg"/>
+      <img src="https://www.fec.gov/static/img/wordmark.svg" draggable="false" />
     </div>
   </header>
 
@@ -37,7 +37,7 @@
         </div>
         <div class="grid-row__col grid-row__col--6 text-right">
           <div class="right-text">
-            <a class="forgot-committee-id-link link" href="https://www.fec.gov/data/" target="_blank">
+            <a class="forgot-committee-id-link link" draggable="false" href="https://www.fec.gov/data/" target="_blank">
               Forgot Committee ID
             </a>
           </div>
@@ -75,7 +75,7 @@
         </div>
         <div class="grid-row__col grid-row__col--6 text-right">
           <div class="right-text">
-            <a class="forgot-password-link link" href="https://test-webforms.fec.gov/psa/index.htm" target="_blank">
+            <a class="forgot-password-link link" draggable="false" href="https://test-webforms.fec.gov/psa/index.htm" target="_blank">
               Forgot Password
             </a>
           </div>
@@ -116,7 +116,7 @@
 
       <div class="grid-row">
         <div class="grid-row__col grid-row__col--12">
-          <a class="need-to-register-link link" href="https://test-webforms.fec.gov/webforms/form1/index.htm" target="_blank">
+          <a class="need-to-register-link link" draggable="false" href="https://test-webforms.fec.gov/webforms/form1/index.htm" target="_blank">
             Do you need to register your committee?
           </a>
         </div>
