Left Indenting transaction Category
Left Indenting transaction under each category for better look

--- a/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.scss
+++ b/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.scss
@@ -115,6 +115,7 @@
                         display: block;
                         width: 100%;
                         padding: 1em;
+                        padding-left: 3em;
                         &:nth-child(even) {
                           background-color: $seaShell !important;
                         }
